--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -10,42 +10,44 @@ BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
 @libvshadow_spec_requires@ @ax_libbfio_spec_requires@ @ax_libcdata_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcfile_spec_requires@ @ax_libclocale_spec_requires@ @ax_libcnotify_spec_requires@ @ax_libcpath_spec_requires@ @ax_libcsplit_spec_requires@ @ax_libcthreads_spec_requires@ @ax_libfdatetime_spec_requires@ @ax_libfguid_spec_requires@ @ax_libuna_spec_requires@
 BuildRequires: gcc @ax_libbfio_spec_build_requires@ @ax_libcdata_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcfile_spec_build_requires@ @ax_libclocale_spec_build_requires@ @ax_libcnotify_spec_build_requires@ @ax_libcpath_spec_build_requires@ @ax_libcsplit_spec_build_requires@ @ax_libcthreads_spec_build_requires@ @ax_libfdatetime_spec_build_requires@ @ax_libfguid_spec_build_requires@ @ax_libuna_spec_build_requires@
 
-%description
+%description -n libvshadow
 Library to access the Windows NT Volume Shadow Snapshot (VSS) format
 
-%package devel
+%package -n libvshadow-devel
 Summary: Header files and libraries for developing applications for libvshadow
 Group: Development/Libraries
 Requires: libvshadow = %{version}-%{release}
 
-%description devel
+%description -n libvshadow-devel
 Header files and libraries for developing applications for libvshadow.
 
-%package python
+%package -n libvshadow-python2
+Obsoletes: libvshadow-python < %{version}
+Provides: libvshadow-python = %{version}
 Summary: Python 2 bindings for libvshadow
 Group: System Environment/Libraries
-Requires: libvshadow = %{version}-%{release} python
-BuildRequires: python-devel
+Requires: libvshadow = %{version}-%{release} python2
+BuildRequires: python2-devel
 
-%description python
+%description -n libvshadow-python2
 Python 2 bindings for libvshadow
 
-%package python3
+%package -n libvshadow-python3
 Summary: Python 3 bindings for libvshadow
 Group: System Environment/Libraries
 Requires: libvshadow = %{version}-%{release} python3
 BuildRequires: python3-devel
 
-%description python3
+%description -n libvshadow-python3
 Python 3 bindings for libvshadow
 
-%package tools
+%package -n libvshadow-tools
 Summary: Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 Group: Applications/System
 Requires: libvshadow = %{version}-%{release} @ax_libfuse_spec_requires@
 @libvshadow_spec_tools_build_requires@ @ax_libfuse_spec_build_requires@
 
-%description tools
+%description -n libvshadow-tools
 Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 
 %prep
@@ -66,13 +68,13 @@ rm -rf %{buildroot}
 
 %postun -p /sbin/ldconfig
 
-%files
+%files -n libvshadow
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
 %attr(755,root,root) %{_libdir}/*.so.*
 
-%files devel
+%files -n libvshadow-devel
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README ChangeLog
@@ -83,7 +85,7 @@ rm -rf %{buildroot}
 %{_includedir}/*
 %{_mandir}/man3/*
 
-%files python
+%files -n libvshadow-python2
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
@@ -91,7 +93,7 @@ rm -rf %{buildroot}
 %{_libdir}/python2*/site-packages/*.la
 %{_libdir}/python2*/site-packages/*.so
 
-%files python3
+%files -n libvshadow-python3
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
@@ -99,7 +101,7 @@ rm -rf %{buildroot}
 %{_libdir}/python3*/site-packages/*.la
 %{_libdir}/python3*/site-packages/*.so
 
-%files tools
+%files -n libvshadow-tools
 %defattr(644,root,root,755)
 %license COPYING
 %doc AUTHORS README
