--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,5 @@
 environment:
-  pypi_token:
+  PYPI_TOKEN:
     secure: VHuZiUWgTqTciKE2nsv/LmdyeK81AE82NQ/2O8cudRCqUqpH2GML/hgtwjoaXgZqF/g2W+sHVn++LlBqKG5MgnvsWjQI0iRhNpSJGBEmViKKbh60OI47cQMnAnZrod9HoczpUe43gP9vJkXKz/j/gxB3dfRDbB4hSsLRQNRTCPI/h7P/jStfbykcteD28pFNurYg6G3LHHVrotlsLj/oZChQOXz1YQCOWIxDu5wzDYfwdKU9e8hx9AYInMuAQl1J6uKp09xM5px63WErMdGXnf3DT6gst9SevAnF+smcXx4=
   matrix:
   - TARGET: vs2008
@@ -80,7 +80,7 @@ environment:
   - TARGET: python39-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos
-    PYTHON: "/usr/local/opt/python@3.9/bin/python3"
+    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -273,6 +273,7 @@ artifacts:
 - path: dist\*.whl
 
 deploy_script:
-- ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and (-not $isLinux) -and $env:BUILD_ENVIRONMENT -eq "python") {
+- ps: If ($env:APPVEYOR_REPO_TAG -eq "true" -and $isWindows -and $env:BUILD_ENVIRONMENT -eq "python") {
     Invoke-Expression "${env:PYTHON} -m twine upload dist/*.whl --username __token__ --password ${env:PYPI_TOKEN} --skip-existing" }
+- sh: if test ${APPVEYOR_REPO_TAG} = "true" && test ${BUILD_ENVIRONMENT} = "python"; then ${PYTHON} -m twine upload dist/*.whl --username __token__ --password ${PYPI_TOKEN} --skip-existing; fi
 
