--- a/dpkg/control
+++ b/dpkg/control
@@ -1,7 +1,7 @@
 Source: libvshadow
 Priority: extra
 Maintainer: Joachim Metz <joachim.metz@gmail.com>
-Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python-dev, python-setuptools, python3-dev, python3-setuptools, libfuse-dev
+Build-Depends: debhelper (>= 9), dh-autoreconf, pkg-config, python3-dev, python3-setuptools, libfuse-dev
 Standards-Version: 4.1.4
 Section: libs
 Homepage: https://github.com/libyal/libvshadow
@@ -45,23 +45,6 @@ Architecture: any
 Depends: libvshadow-tools (= ${binary:Version}), ${misc:Depends}
 Description: Debugging symbols for libvshadow-tools
  Debugging symbols for libvshadow-tools.
-
-Package: libvshadow-python
-Section: python
-Architecture: any
-Depends: libvshadow (= ${binary:Version}), ${shlibs:Depends}, ${misc:Depends}
-Conflicts: python-libvshadow
-Replaces: python-libvshadow
-Suggests: libvshadow-python-dbg
-Description: Python 2 bindings for libvshadow
- Python 2 bindings for libvshadow.
-
-Package: libvshadow-python-dbg
-Section: debug
-Architecture: any
-Depends: libvshadow-python (= ${binary:Version}), ${misc:Depends}
-Description: Debugging symbols for libvshadow-python
- Debugging symbols for libvshadow-python.
 
 Package: libvshadow-python3
 Section: python
