--- a/libvshadow.spec.in
+++ b/libvshadow.spec.in
@@ -29,17 +29,6 @@ Requires: libvshadow = %{version}-%{release}
 %description -n libvshadow-devel
 Header files and libraries for developing applications for libvshadow.
 
-%package -n libvshadow-python2
-Obsoletes: libvshadow-python < %{version}
-Provides: libvshadow-python = %{version}
-Summary: Python 2 bindings for libvshadow
-Group: System Environment/Libraries
-Requires: libvshadow = %{version}-%{release} python2
-BuildRequires: python2-devel
-
-%description -n libvshadow-python2
-Python 2 bindings for libvshadow
-
 %package -n libvshadow-python3
 Summary: Python 3 bindings for libvshadow
 Group: System Environment/Libraries
@@ -62,7 +51,7 @@ Several tools for reading Windows NT Volume Shadow Snapshots (VSS)
 %setup -q
 
 %build
-%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python2 --enable-python3
+%configure --prefix=/usr --libdir=%{_libdir} --mandir=%{_mandir} --enable-python3
 make %{?_smp_mflags}
 
 %install
@@ -97,14 +86,6 @@ rm -rf %{buildroot}
 %{_libdir}/pkgconfig/libvshadow.pc
 %{_includedir}/*
 %{_mandir}/man3/*
-
-%files -n libvshadow-python2
-%defattr(644,root,root,755)
-%license COPYING COPYING.LESSER
-%doc AUTHORS README
-%{_libdir}/python2*/site-packages/*.a
-%{_libdir}/python2*/site-packages/*.la
-%{_libdir}/python2*/site-packages/*.so
 
 %files -n libvshadow-python3
 %defattr(644,root,root,755)
