--- a/appveyor.yml
+++ b/appveyor.yml
@@ -56,8 +56,8 @@ environment:
   - TARGET: macos-x64-gcc-python
     BUILD_ENVIRONMENT: xcode
     APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
-    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
-    PYTHON_CONFIG: "/usr/local/opt/python@3.10/bin/python3-config"
+    PYTHON: "/usr/local/opt/python@3.11/bin/python3"
+    PYTHON_CONFIG: "/usr/local/opt/python@3.11/bin/python3-config"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -65,8 +65,8 @@ environment:
   - TARGET: macos-pkgbuild
     BUILD_ENVIRONMENT: xcode
     APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
-    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
-    PYTHON_CONFIG: "/usr/local/opt/python@3.10/bin/python3-config"
+    PYTHON: "/usr/local/opt/python@3.11/bin/python3"
+    PYTHON_CONFIG: "/usr/local/opt/python@3.11/bin/python3-config"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -85,10 +85,10 @@ environment:
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
     PYTHON: "C:\\Python310-x64\\python.exe"
-  - TARGET: python39-x64
+  - TARGET: python311-x64
     BUILD_ENVIRONMENT: python
     APPVEYOR_BUILD_WORKER_IMAGE: macos-monterey
-    PYTHON: "/usr/local/opt/python@3.10/bin/python3"
+    PYTHON: "/usr/local/bin/python3"
     HOMEBREW_NO_INSTALL_CLEANUP: 1
     CFLAGS: "-I/usr/local/include"
     LDFLAGS: "-L/usr/local/lib"
@@ -216,11 +216,15 @@ install:
     }
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode" || test ${BUILD_ENVIRONMENT} = "python"; then brew update -q; fi
 - sh: if test ${BUILD_ENVIRONMENT} = "xcode" || test ${BUILD_ENVIRONMENT} = "python"; then brew install -q gettext gnu-sed || true; fi
-- sh: if test ${BUILD_ENVIRONMENT} = "python"; then brew install -q python3 || true; fi
+- sh: if test ${BUILD_ENVIRONMENT} = "python"; then brew install -q python@3.11 || true; fi
 - ps: If ($env:BUILD_ENVIRONMENT -eq "python") {
     Invoke-Expression "${env:PYTHON} -m pip install -U pip setuptools twine wheel" }
+- ps: If ($env:BUILD_ENVIRONMENT -eq "cygwin") {
+    (New-Object Net.WebClient).DownloadFile("https://cygwin.com/setup-x86.exe", "C:\\cygwin\\setup-x86.exe") }
+- ps: If ($env:BUILD_ENVIRONMENT -eq "cygwin64") {
+    (New-Object Net.WebClient).DownloadFile("https://cygwin.com/setup-x86_64.exe", "C:\\cygwin\\setup-x86_64.exe") }
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin] (
-    C:\cygwin\setup-x86.exe -qgnNdO -l C:\cygwin\var\cache\setup -R c:\cygwin -s http://cygwin.mirror.constant.com -P gettext-devel -P python2-devel -P python3-devel )
+    C:\cygwin\setup-x86.exe --allow-unsupported-windows -qgnNdO -l C:\cygwin\var\cache\setup -R c:\cygwin -s https://mirrors.kernel.org/sourceware/cygwin-archive/20221123 -P gettext-devel -P python2-devel -P python3-devel )
 - cmd: if [%BUILD_ENVIRONMENT%]==[cygwin64] (
     C:\cygwin64\setup-x86_64.exe -qgnNdO -l C:\cygwin64\var\cache\setup -R c:\cygwin64 -s http://cygwin.mirror.constant.com -P gettext-devel -P python2-devel -P python3-devel )
 - cmd: if [%BUILD_ENVIRONMENT%]==[mingw-w64] (
